fixed the dix some more, had it wrapping the wrong content

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 	box-sizing: inherit;
 }
 
-textarea, .messages{
+textarea, .msgs{
 	display: inline;
 }
 
@@ -26,14 +26,14 @@ textarea{
 	outline-width: 0px;
 	background-color: #E5EAEC;
 }
-.messages{
+.msgs{
 	max-width: 50%;
 	float: left;
 	color: grey;
 	font-size: 14pt;
 	margin: 40px;
 }
-.messages p{
+.msgs p{
 	max-width: 100%;
 	margin-left: 40px;
 }
